# simple-rust-chat

./: Cargo.toml  README.md  config.toml  db.sqlite  db.sqlite-journal
migrations/: 001_create_users_table.sql  003_create_ban_flag.sql  004_create_kick_table.sql  005_create_files_table.sql  006_add_admin_verified_to_files.sql
src/: main.rs
src/client/: mod.rs
src/db/: mod.rs
src/tui/: mod.rs
