[package]
name = "chatserver"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
x25519-dalek = "2.0.0-rc.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_core = "0.6.4"
crypto = "0.5.1"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"